--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -11,6 +11,8 @@ jobs:
   release-notes-2:
     runs-on: ubuntu-latest
     steps:
+      - name: Checkout Repository
+        uses: actions/checkout@v3
       - name: Rename release-notes.md if present
         if: ${{ hashFiles('./new-release-notes.md') != '' }}
         run: |
