--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -13,6 +13,8 @@ jobs:
     steps:
       - name: Checkout Repository
         uses: actions/checkout@v3
+        with:
+          ref: ${{ github.event.pull_request.head.ref }}
       - name: Rename release-notes.md if present
         if: ${{ hashFiles('./new-release-notes.md') != '' }}
         run: |
@@ -22,5 +24,5 @@ jobs:
           git mv './new-release-notes.md' './upcoming-release-notes/${{ github.event.pull_request.number }}.md'
           git add .
           git commit -m 'Renamed release notes for PR ${{ github.event.pull_request.number }}'
-          git push origin HEAD:${{ github.ref }} 
+          git push
 
